@@ -37,46 +37,29 @@ Mindolph is an open source personal knowledge management software for all deskto
 
 ### Releases
 
-* Unstable: v1.1 RC
+* Stable: v1.1
 
-	* [MacOS](https://github.com/mindolph/Mindolph/releases/download/1.1-RC/Mindolph-1.1-RC.dmg)
+	* [MacOS](https://github.com/mindolph/Mindolph/releases/download/1.1-stable/Mindolph-1.1.dmg)
 	
-	* [Windows x64](https://github.com/mindolph/Mindolph/releases/download/1.1-RC/Mindolph-1.1-RC.msi)
+	* [Windows x64](https://github.com/mindolph/Mindolph/releases/download/1.1-stable/Mindolph-1.1.msi)
 	
-	* [Debian](https://github.com/mindolph/Mindolph/releases/download/1.1-RC/Mindolph-1.1-RC.deb)
+	* [Debian](https://github.com/mindolph/Mindolph/releases/download/1.1-stable/Mindolph-1.1.deb)
 	
 		> for supporting PlantUML, install graphviz first:  
 		> `sudo apt install graphviz`
 	
-	* [Fedora](https://github.com/mindolph/Mindolph/releases/download/1.1-RC/Mindolph-1.1-RC.rpm)
+	* [Fedora](https://github.com/mindolph/Mindolph/releases/download/1.1-stable/Mindolph-1.1.rpm)
 	
-	* [Java Executable(.jar)](https://github.com/mindolph/Mindolph/releases/download/1.1-RC/Mindolph-1.1-RC.jar)
+	* [Java Executable(.jar)](https://github.com/mindolph/Mindolph/releases/download/1.1-stable/Mindolph-1.1.jar)
 	
 		> If you are using Linux, run the jar like this:  
-		> `java -jar Mindolph-1.1-RC.jar`  
+		> `java -jar Mindolph-1.1.jar`  
 		> If not, Download JavaFX SDK(17+) for your platform and extract to somewhere eg: `/mnt`, run the jar file like this:   
 		> `java --module-path /mnt/javafx-sdk-17/lib --add-modules 
 		> java.sql,javafx.controls,javafx.fxml,javafx.swing,javafx.web -jar 
-		> Mindolph-1.1-RC.jar`
+		> Mindolph-1.1.jar`
 
 
-* Stable: v1.0
-
-	* [MacOS](https://github.com/mindolph/Mindolph/releases/download/1.0-stable/Mindolph-1.0.dmg)
-	
-	* [Windows x64](https://github.com/mindolph/Mindolph/releases/download/1.0-stable/Mindolph-1.0.msi)
-	
-	* [Linux(.deb)](https://github.com/mindolph/Mindolph/releases/download/1.0-stable/Mindolph_1.0_amd64.deb)
-	
-		> for supporting PlantUML, install graphviz first:  
-		> `sudo apt install graphviz`
-	
-	* [Java Executable(.jar)](https://github.com/mindolph/Mindolph/releases/download/1.0-stable/Mindolph-1.0.jar)
-	
-		> Download JavaFX SDK(17+) for your platform and extract to somewhere eg: `/mnt`, run the jar file like this:   
-		> `java --module-path /mnt/javafx-sdk-17/lib --add-modules 
-		> java.sql,javafx.controls,javafx.fxml,javafx.swing,javafx.web -jar 
-		> Mindolph-1.0.jar`
 
 [Release Notes](docs/release_notes.md)
 
